test/sema/out_param/amp_op_invalid.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
struct S<T> { x: T }

fn foo(x: borrowed mut number) {}

fn bar(x: borrowed number) {}

fn main() {
  let x = 1;

  // CHECK: [[# @LINE + 1 ]]:7: error: cannot unify 'number' with 'borrowed mut number'
  foo(x);

  // CHECK: [[# @LINE + 1 ]]:7: error: only lvalues can be borrowed
  bar(1);

  let z = 0;

  bar(z);
}
// CHECK-NOT: {{.*error.*}}
